# dalalstreet-data

./: .gitignore  LICENSE.YOLO.md  README.md  blog_run_test.sh  pyproject.toml  ruff.toml  run_tests.sh
.github/ISSUE_TEMPLATE/: enhancements.yml  issue.yml
dalalstreet_data/: __init__.py  cli.py  holidays.py  util.py
dalalstreet_data/nse/: archives.py  history.py  live.py
dalalstreet_data/rbi/: __init__.py
docs/: index.rst
tests/: test_bhav.py  test_cli.py  test_holidays.py  test_nse.py  test_nse_live.py  test_rbi.py  test_util.py
