[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dalalstreet-data"
version = "0.27"
requires-python = ">= 3.6"
#authors = [{"name"= "jugaad-coder", "email"="abc@xyz.com"}] # original authors
authors = [{ "name" = "knl.bhg@gmail.com", "email" = "knl.bhg@gmail.com" }, { "name" = "sbvamsi@gmail.com", "email" = "sbvamsi@gmail.com" }]
description = "Free Zerodha API python library"
readme = "README.md"
license = { file = "LICENSE.YOLO.md" }
keywords = ["NSE", "Live", "Bhavcopy", "History", "Futures", "Options", "Stock Data"]
dynamic = ["dependencies"]


[project.scripts]
dalalstreet = "dalalstreet_data.cli:cli"

[project.urls]
Repository = "https://github.com/kunalbhagawati/dalalstreet-data"
Issues = "https://github.com/kunalbhagawati/dalalstreet-data/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
