[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dalalstreet-data"
version = "1.1.0"
requires-python = ">= 3.9"
#authors = [{"name"= "jugaad-coder", "email"="abc@xyz.com"}] # original authors
authors = [{ "name" = "knl.bhg@gmail.com", "email" = "knl.bhg@gmail.com" }, { "name" = "sbvamsi@gmail.com", "email" = "sbvamsi@gmail.com" }]
description = "Free Zerodha API python library"
readme = "README.md"
license = { file = "LICENSE.YOLO.md" }
keywords = ["NSE", "Live", "Bhavcopy", "History", "Futures", "Options", "Stock Data"]

dependencies = [
    "requests",
    "click>=8.0,<8.2",
    "appdirs==1.4.4",
    "beautifulsoup4==4.9.3",
    'importlib-metadata; python_version<"3.8"',
]

[project.optional-dependencies]
dev = [
    "ipython",
    "ruff",
    "pytest==7.1.2",
    "pytest-testmon",
    "pytest-watch",
    "pyfakefs",
    "pandas",
    "jupyterlab",
    "twine",
]

[project.scripts]
dalalstreet = "dalalstreet_data.cli:cli"

[project.urls]
Repository = "https://github.com/kunalbhagawati/dalalstreet-data"
Issues = "https://github.com/kunalbhagawati/dalalstreet-data/issues"

